samples/_failures_safe/1761425716_65999c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fe3580e.c: In function ‘main’:
./samples/SAFE/__tmp_3fe3580e.c:159:28: error: missing terminating " character
  159 |                     printf("Error
      |                            ^~~~~~
./samples/SAFE/__tmp_3fe3580e.c:159:21: error: expected expression at end of input
  159 |                     printf("Error
      |                     ^~~~~~
./samples/SAFE/__tmp_3fe3580e.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fe3580e.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fe3580e.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fe3580e.c:159:21: error: expected declaration or statement at end of input
